@@ -1,18 +1,19 @@
 package com.backbase.interview.addresslocator.services;
 
-import org.apache.camel.*;
+import org.apache.camel.CamelContext;
+import org.apache.camel.EndpointInject;
+import org.apache.camel.Exchange;
+import org.apache.camel.ProducerTemplate;
 import org.apache.camel.impl.DefaultExchange;
 import org.apache.camel.impl.HashMapHeadersMapFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.net.URLDecoder;
-import java.net.URLEncoder;
 import java.util.Map;
 
 import static com.backbase.interview.addresslocator.data.Constants.*;
@@ -22,21 +23,26 @@ import static com.backbase.interview.addresslocator.data.Constants.*;
 @Component("[addressLocator]")
 public class AddressLocatorImpl implements AddressLocator {
 
-	@EndpointInject(uri=DIRECT_GOOGLE)
-	ProducerTemplate producer;
+	@EndpointInject(uri = DIRECT_GOOGLE)
+	private ProducerTemplate producer;
 
-	@EndpointInject(uri= DIRECT_XML2JSON)
-	ProducerTemplate marshalProducer;
+	@EndpointInject(uri = DIRECT_XML2JSON)
+	private ProducerTemplate marshalProducer;
 
-	private String addressAsJson;
 	private static final Logger logger = LoggerFactory.getLogger(AddressLocatorImpl.class.getName());
 
-	@PostMapping(value= ENDPOINT_ADDRESS, produces = "application/json")
+	/**
+	 * Here is our Rest Endpoint that handles the address string per the requirements
+	 * @param addressString the string representing the address
+	 * @return the Google GeocodeResponse represented as JSON
+	 */
+	@PostMapping(value= ENDPOINT_ADDRESS, produces = MEDIA_TYPE_JSON)
 	public String locateAddressAndReturnAsJson(@RequestBody String addressString) {
 
 		logger.info("Welcome to My Web Service");
+		String addressAsStringFromGoogle;
 		try {
-			addressString = URLDecoder.decode(addressString,"UTF-8" );
+			addressString = URLDecoder.decode(addressString, UTF_8);
 			addressString = handleWebForm(addressString);
 			CamelContext context = producer.getCamelContext();
 			Exchange exchange = new DefaultExchange(context);
@@ -44,21 +50,22 @@ public class AddressLocatorImpl implements AddressLocator {
 			Map<String, Object> headerMap = new HashMapHeadersMapFactory().newMap();
 			headerMap.put("param1", addressString);
 			exchange.getIn().setHeaders(headerMap);
+			//call google here - XML will show in logs
 			producer.send(exchange);
-			addressAsJson = exchange.getProperty(RESULT).toString();
+			//transform to JSON - JSON will show in logs
 			marshalProducer.send(exchange);
-			addressAsJson = new String(((byte [])exchange.getProperty(RESULT)), "UTF-8");
-			logger.info("Response was ::: {}", addressAsJson);
+			addressAsStringFromGoogle = new String(((byte [])exchange.getProperty(RESULT)), UTF_8);
 		} catch (Exception e) {
-			logger.error(e.getMessage());
-			e.printStackTrace();
+			logger.error("Error is {}", e, e.getMessage());
+			//normally we'd write our own for this
 			throw new RuntimeException(e);
 		}
-		return addressAsJson;
+		return addressAsStringFromGoogle;
 	}
 
 	/**
-	 * there's a better way to do this, but time is short
+	 * Ordinarily we'd build a structure for input, but there is just one line - so to
+	 * keep it simple
 	 * @param input the string to be checked
 	 * @return the part after the equals sign - for web forms
 	 */
